recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:17: error: illegal start of simple expression
}
^